force-app/main/default/objects/WinaproachIncidentRejectedReasonCode__c/WinaproachIncidentRejectedReasonCode__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Win@proach Rejected ReasonCode Mapping</description>
    <label>Win@proach Incident Rejected ReasonCode</label>
</CustomObject>