force-app/main/default/objects/WinaproachIncidentRejectedReasonCode__c/fields/Alt_Request_or_Template__c.field-meta.xml
<CustomField>
    <fullName>Alt_Request_or_Template__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alt Request or Template</label>
    <length>100</length>
    <type>Text</type>
</CustomField>