force-app/main/default/objects/WinaproachIncidentRejectedReasonCode__c/fields/Customer_Infrastructure__c.field-meta.xml
<CustomField>
    <fullName>Customer_Infrastructure__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Infrastructure</label>
    <length>200</length>
    <type>Text</type>
</CustomField>