force-app/main/default/objects/WinaproachIncidentRejectedReasonCode__c/fields/Functional_Setting__c.field-meta.xml
<CustomField>
    <fullName>Functional_Setting__c</fullName>
    <description>Functional Setting</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Functional Setting</inlineHelpText>
    <label>Customer Functional Setting</label>
    <length>10</length>
    <type>Text</type>
</CustomField>