force-app/main/default/objects/WinaproachIncidentRejectedReasonCode__c/fields/More_Information_Requested__c.field-meta.xml
<CustomField>
    <fullName>More_Information_Requested__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>More Information Requested</label>
    <length>10</length>
    <type>Text</type>
</CustomField>